--- a/calculators/self-employment-tax.html
+++ b/calculators/self-employment-tax.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="en" data-theme="auto">
 <head>
     <meta charset="UTF-8">
@@ -34,6 +34,59 @@
 
     <link rel="stylesheet" href="../css/style.css">
     <link rel="stylesheet" href="../css/calc-layout.css">
+
+    <script type="application/ld+json">
+    {
+        "@context": "https://schema.org",
+        "@type": "WebApplication",
+        "name": "Self-Employment Tax Calculator",
+        "description": "Estimate self-employment tax, quarterly payments, and total tax liability",
+        "applicationCategory": "FinanceApplication",
+        "operatingSystem": "Any",
+        "offers": { "@type": "Offer", "price": "0", "priceCurrency": "USD" }
+    }
+    </script>
+
+    <script type="application/ld+json">
+    {
+        "@context": "https://schema.org",
+        "@type": "FAQPage",
+        "mainEntity": [
+            {
+                "@type": "Question",
+                "name": "What is self-employment tax?",
+                "acceptedAnswer": {
+                    "@type": "Answer",
+                    "text": "Self-employment tax covers Social Security and Medicare for people who work for themselves. You pay both the employer and employee portions."
+                }
+            },
+            {
+                "@type": "Question",
+                "name": "When are quarterly payments due?",
+                "acceptedAnswer": {
+                    "@type": "Answer",
+                    "text": "Estimated tax payments are generally due April 15, June 15, September 15, and January 15. Dates can shift for weekends or holidays."
+                }
+            },
+            {
+                "@type": "Question",
+                "name": "Can I reduce my SE tax?",
+                "acceptedAnswer": {
+                    "@type": "Answer",
+                    "text": "You can reduce taxable income through eligible business deductions, retirement contributions, and health insurance premiums. You can also deduct half of SE tax from income tax."
+                }
+            },
+            {
+                "@type": "Question",
+                "name": "How accurate is this calculator?",
+                "acceptedAnswer": {
+                    "@type": "Answer",
+                    "text": "This is a simplified estimate and does not cover every rule or deduction. Use IRS guidance or a tax professional for precise calculations."
+                }
+            }
+        ]
+    }
+    </script>
 </head>
 <body>
     <!-- Skip to content for accessibility -->
@@ -45,6 +98,7 @@
         <h1 class="calc-title">Self-Employment Tax Calculator</h1>
         <nav class="calc-nav">
             <a href="../#calculators">All Calculators</a>
+            <a href="/guides/">Guides</a>
             <button class="info-toggle" aria-label="Show information" aria-expanded="false">
                 <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><circle cx="12" cy="12" r="10"></circle><line x1="12" y1="16" x2="12" y2="12"></line><line x1="12" y1="8" x2="12.01" y2="8"></line></svg>
             </button>
@@ -56,7 +110,11 @@
 
     <!-- Tool Layout -->
     <main id="main-content" class="calc-tool-layout">
-        <!-- Input Panel -->
+        
+        <section class="calc-guide-callout">
+            <p><strong>Need context?</strong> Read our income and taxes guide for assumptions and strategy.</p>
+            <a href="/guides/income-taxes.html">Read the guide</a>
+        </section><!-- Input Panel -->
         <div class="calc-input-panel">
             <div class="calc-panel-header">
                 <div class="calc-panel-title">
@@ -135,15 +193,15 @@
 
             <!-- Quick Links -->
             <div class="calc-quick-links">
-                <a href="salary.html" class="calc-quick-link">💰 <span>Salary</span></a>
-                <a href="take-home-pay.html" class="calc-quick-link">💵 <span>Take-Home Pay</span></a>
-                <a href="401k.html" class="calc-quick-link">🏦 <span>401(k)</span></a>
-                <a href="retirement.html" class="calc-quick-link">🎯 <span>Retirement</span></a>
+                <a href="salary.html" class="calc-quick-link">馃挵 <span>Salary</span></a>
+                <a href="take-home-pay.html" class="calc-quick-link">馃挼 <span>Take-Home Pay</span></a>
+                <a href="401k.html" class="calc-quick-link">馃彟 <span>401(k)</span></a>
+                <a href="retirement.html" class="calc-quick-link">馃幆 <span>Retirement</span></a>
             </div>
         </div>
 
         <!-- Output Panel -->
-        <div class="calc-output-panel">
+        <div class="calc-output-panel" id="results">
             <div class="calc-result-main">
                 <div class="big-number" id="quarterlyPayment">$0</div>
                 <div class="label">Estimated Quarterly Payment</div>
@@ -247,38 +305,113 @@
                     <div class="calc-breakdown">
                         <div class="breakdown-item">
                             <span class="breakdown-label">Q1 (Jan-Mar)</span>
-                            <span class="breakdown-value">April 15, 2026</span>
+                            <span class="breakdown-value">April 15</span>
                         </div>
                         <div class="breakdown-item">
                             <span class="breakdown-label">Q2 (Apr-May)</span>
-                            <span class="breakdown-value">June 15, 2026</span>
+                            <span class="breakdown-value">June 15</span>
                         </div>
                         <div class="breakdown-item">
                             <span class="breakdown-label">Q3 (Jun-Aug)</span>
-                            <span class="breakdown-value">September 15, 2026</span>
+                            <span class="breakdown-value">September 15</span>
                         </div>
                         <div class="breakdown-item">
                             <span class="breakdown-label">Q4 (Sep-Dec)</span>
-                            <span class="breakdown-value">January 15, 2027</span>
+                            <span class="breakdown-value">January 15</span>
                         </div>
                         <div class="breakdown-item total">
                             <span class="breakdown-label">Each Payment</span>
                             <span class="breakdown-value" id="quarterlyPaymentAmount">$0</span>
                         </div>
                     </div>
-                    <p class="info-note">Due: Apr 15, Jun 15, Sep 15, Jan 15</p>
+                    <p class="info-note">Typically due: Apr 15, Jun 15, Sep 15, Jan 15 (dates can shift for weekends or holidays).</p>
                 </div>
             </div>
         </div>
+
+        <section class="calc-longform" id="self-employment-tax-guide">
+            <div class="calc-longform-inner">
+                <header class="calc-longform-header">
+                    <h2>Self-employment tax planning guide</h2>
+                    <p>This calculator estimates SE tax, federal tax, and a simplified state tax to help you plan quarterly payments. Use it as a starting point and verify current rules.</p>
+                </header>
+
+                <div class="calc-longform-grid">
+                    <div class="calc-longform-card">
+                        <h4>Net earnings</h4>
+                        <p>Start with gross income minus business expenses to estimate taxable net earnings.</p>
+                    </div>
+                    <div class="calc-longform-card">
+                        <h4>Tax layers</h4>
+                        <p>SE tax covers Social Security and Medicare, then income taxes apply on top.</p>
+                    </div>
+                    <div class="calc-longform-card">
+                        <h4>Quarterly payments</h4>
+                        <p>Estimated taxes are paid through quarterly due dates throughout the year.</p>
+                    </div>
+                </div>
+
+                <div class="calc-longform-section">
+                    <h3>What this calculator includes</h3>
+                    <ul>
+                        <li>SE tax on 92.35% of net earnings, including the wage base cap.</li>
+                        <li>Additional Medicare tax above the threshold for your filing status.</li>
+                        <li>Simplified federal brackets and state tax estimates.</li>
+                        <li>Deductions for half of SE tax, retirement contributions, and health insurance premiums.</li>
+                    </ul>
+                </div>
+
+                <div class="calc-longform-section">
+                    <h3>What it does not include</h3>
+                    <ul>
+                        <li>Itemized deductions, tax credits, or Qualified Business Income (QBI) deduction.</li>
+                        <li>Local taxes, self-employment surtaxes, or state-specific brackets.</li>
+                        <li>Phaseouts, alternative minimum tax, or special case rules.</li>
+                    </ul>
+                </div>
+
+                <div class="calc-longform-section">
+                    <h3>Ways to improve accuracy</h3>
+                    <ul>
+                        <li>Update assumptions for the latest IRS wage base and brackets.</li>
+                        <li>Use your actual state tax rules instead of the simplified estimate.</li>
+                        <li>Account for credits and deductions you regularly claim.</li>
+                    </ul>
+                </div>
+
+                <div class="calc-longform-note">For precise filing, confirm details with IRS guidance or a tax professional.</div>
+
+                <div class="calc-longform-section calc-faq">
+                    <h3>Self-employment tax calculator FAQ</h3>
+                    <details>
+                        <summary>What is self-employment tax?</summary>
+                        <p>Self-employment tax covers Social Security and Medicare for people who work for themselves. You pay both the employer and employee portions.</p>
+                    </details>
+                    <details>
+                        <summary>When are quarterly payments due?</summary>
+                        <p>Estimated tax payments are generally due April 15, June 15, September 15, and January 15. Dates can shift for weekends or holidays.</p>
+                    </details>
+                    <details>
+                        <summary>Can I reduce my SE tax?</summary>
+                        <p>You can reduce taxable income through eligible business deductions, retirement contributions, and health insurance premiums. You can also deduct half of SE tax from income tax.</p>
+                    </details>
+                    <details>
+                        <summary>How accurate is this calculator?</summary>
+                        <p>This is a simplified estimate and does not cover every rule or deduction. Use IRS guidance or a tax professional for precise calculations.</p>
+                    </details>
+                </div>
+            </div>
+        </section>
     </main>
 
     <!-- Info Sidebar -->
     <aside class="info-sidebar" id="infoSidebar" aria-hidden="true">
         <div class="info-sidebar-header">
             <h2>About This Calculator</h2>
-            <button class="info-sidebar-close" aria-label="Close">×</button>
+            <button class="info-sidebar-close" aria-label="Close">脳</button>
         </div>
         <div class="info-sidebar-content">
+            <p class="info-note">Assumptions: Tax parameters for <span data-tax-param="year">--</span>. Updated <span data-tax-param="updated">--</span>.</p>
             <!-- How to Use Section -->
             <section class="info-section">
                 <h3>
@@ -297,8 +430,8 @@
                 <ul>
                     <li><strong>SE Tax Rate:</strong> 15.3% (12.4% Social Security + 2.9% Medicare)</li>
                     <li><strong>Applied to:</strong> 92.35% of net earnings</li>
-                    <li><strong>SS Wage Base:</strong> $168,600 (2024)</li>
-                    <li><strong>Additional Medicare:</strong> 0.9% over $200k (single) or $250k (married)</li>
+                    <li><strong>SS Wage Base:</strong> Updates annually based on SSA guidance</li>
+                    <li><strong>Additional Medicare:</strong> Applies above thresholds that vary by filing status</li>
                 </ul>
             </section>
 
@@ -311,7 +444,7 @@
                 <ul>
                     <li><strong>50% SE Tax:</strong> Deductible from income tax</li>
                     <li><strong>Health Insurance:</strong> 100% deductible for self-employed</li>
-                    <li><strong>Retirement:</strong> SEP-IRA up to 25% of net earnings</li>
+                    <li><strong>Retirement:</strong> SEP-IRA or Solo 401(k) limits depend on IRS caps and net earnings</li>
                     <li><strong>Home Office:</strong> If used exclusively for business</li>
                     <li><strong>Business Expenses:</strong> Supplies, equipment, travel, etc.</li>
                 </ul>
@@ -326,7 +459,7 @@
                 <ol>
                     <li>Calculate net self-employment income (gross minus expenses)</li>
                     <li>Multiply by 92.35% (employer-equivalent adjustment)</li>
-                    <li>Apply 12.4% Social Security tax (up to wage base)</li>
+                    <li>Apply 12.4% Social Security tax (up to the annual wage base)</li>
                     <li>Apply 2.9% Medicare tax (no limit)</li>
                     <li>Add 0.9% Additional Medicare if over threshold</li>
                 </ol>
@@ -344,7 +477,7 @@
                 </div>
                 <div class="faq-item">
                     <h4>When are quarterly payments due?</h4>
-                    <p>Quarterly estimated tax payments are due April 15, June 15, September 15, and January 15 of the following year. Missing payments can result in penalties.</p>
+                    <p>Quarterly estimated tax payments are generally due April 15, June 15, September 15, and January 15 of the following year. Dates can shift for weekends or holidays.</p>
                 </div>
                 <div class="faq-item">
                     <h4>Can I reduce my SE tax?</h4>
@@ -390,7 +523,7 @@
                 <div class="policy-grid">
                     <a href="https://www.google.com/search?q=IRS+self-employment+tax+form+SE" target="_blank" rel="noopener">Schedule SE Form</a>
                     <a href="https://www.google.com/search?q=IRS+estimated+tax+payments+1040-ES" target="_blank" rel="noopener">Form 1040-ES</a>
-                    <a href="https://www.google.com/search?q=SEP+IRA+contribution+limits+2024" target="_blank" rel="noopener">SEP-IRA Limits</a>
+                    <a href="https://www.google.com/search?q=SEP+IRA+contribution+limits" target="_blank" rel="noopener">SEP-IRA Limits</a>
                     <a href="https://www.google.com/search?q=self-employed+health+insurance+deduction" target="_blank" rel="noopener">Health Insurance Deduction</a>
                     <a href="https://www.google.com/search?q=IRS+quarterly+estimated+tax+penalty" target="_blank" rel="noopener">Quarterly Tax Penalties</a>
                     <a href="https://www.google.com/search?q=solo+401k+contribution+limits" target="_blank" rel="noopener">Solo 401(k) Limits</a>
@@ -402,13 +535,14 @@
 
     <footer>
         <div class="container">
-            <p>© 2026 FinCalc. All rights reserved.</p>
+            <p class="footer-links">
+                <a href="/privacy.html">Privacy Policy</a>
+                <a href="/terms.html">Terms of Service</a>
+                <a href="/editorial.html">Editorial Policy</a>
+            </p>
+            <p>&copy; 2026 FinCalc. All rights reserved.</p>
             <p class="disclaimer">For educational purposes only. Consult a tax professional for personalized advice.</p>
-            <div class="friend-links">
-                <span>Friend Links:</span>
-                <a href="https://qrmaker.life/" target="_blank" rel="noopener">QR Code Generator</a>
             </div>
-        </div>
     </footer>
 
     <!-- Theme Manager -->
@@ -418,6 +552,7 @@
     <!-- Info Sidebar -->
     <script src="../js/info-sidebar.js"></script>
     <!-- Self-Employment Tax Calculator -->
+    <script src="../js/tax-params.js"></script>
     <script src="../js/self-employment-tax.js"></script>
     <!-- Monetization -->
     <script src="../js/monetization.js"></script>
@@ -425,3 +560,6 @@
     <script src="../js/affiliate-links.js"></script>
 </body>
 </html>
+
+
+
