chore: extend breadcrumbs and seo scripts on trust pages

--- a/methodology.html
+++ b/methodology.html
@@ -105,5 +105,6 @@
             document.querySelector('.nav-links')?.classList.toggle('open');
         });
     </script>
+    <script src="js/seo.js" defer></script>
 </body>
 </html>
