--- a/editorial.html
+++ b/editorial.html
@@ -98,6 +98,7 @@
             document.querySelector('.nav-links')?.classList.toggle('open');
         });
     </script>
+    <script src="js/seo.js" defer></script>
 </body>
 </html>
 
