--- a/privacy.html
+++ b/privacy.html
@@ -107,5 +107,6 @@
         </div>
     </footer>
     <script src="js/i18n.js"></script>
+    <script src="js/seo.js" defer></script>
 </body>
 </html>
