--- a/terms.html
+++ b/terms.html
@@ -101,5 +101,6 @@
         </div>
     </footer>
     <script src="js/i18n.js"></script>
+    <script src="js/seo.js" defer></script>
 </body>
 </html>
