chore: add methodology link to guides nav

--- a/guides/index.html
+++ b/guides/index.html
@@ -40,6 +40,7 @@
                 <li><a href="/guides/" class="active">Guides</a></li>
                 <li><a href="/blog/">Blog</a></li>
                 <li><a href="/editorial.html">Editorial</a></li>
+                <li><a href="/methodology.html">Methodology</a></li>
             </ul>
         </nav>
     </header>
@@ -116,4 +117,5 @@
     </script>
 </body>
 </html>
+
 
