chore: cross-link methodology from editorial policy

--- a/editorial.html
+++ b/editorial.html
@@ -60,6 +60,7 @@
 
                 <h3>2) AI Assistance Disclosure</h3>
                 <p>Some articles are produced with AI assistance. Drafts pass automated checks for structure and required fields, and are reviewed by a human when possible. We do not claim human authorship for AI-generated text.</p>
+                <p>For how we define calculator assumptions and update parameters, see our <a href="/methodology.html">Methodology</a> page.</p>
 
                 <h3>3) Sources and Citations</h3>
                 <p>Articles list sources used in writing. We prioritize primary sources (government agencies, regulators, official releases) and reputable financial publications. If a claim cannot be supported, it is removed or clearly labeled as a scenario or estimate.</p>
