chore: add methodology link to homepage trust block

--- a/index.html
+++ b/index.html
@@ -385,7 +385,8 @@
                 <div class="editorial-highlight">
                     <h3>Editorial Standards</h3>
                     <p>We publish calculator explanations and research-backed guides. Articles are AI-assisted and pass automated checks. Sources are listed on every article.</p>
-                    <a class="editorial-link" href="/editorial.html">Read our Editorial Policy â†?/a>
+                    <a class="editorial-link" href="/editorial.html">Read our Editorial Policy -></a>
+                    <a class="editorial-link" href="/methodology.html">View our Methodology & Assumptions -></a>
                 </div>
             </div>
         </section>
