fix: add results container ids across calculators

--- a/calculators/401k.html
+++ b/calculators/401k.html
@@ -190,7 +190,7 @@
         </div>
 
         <!-- Output Panel -->
-        <div class="calc-output-panel">
+        <div class="calc-output-panel" id="results">
             <div class="calc-result-main">
                 <div class="big-number" id="totalAtRetirement">$0</div>
                 <div class="label">Projected 401(k) Balance at Retirement</div>
