--- a/calculators/auto-loan.html
+++ b/calculators/auto-loan.html
@@ -213,7 +213,7 @@
         </div>
 
         <!-- Output Panel -->
-        <div class="calc-output-panel">
+        <div class="calc-output-panel" id="results">
             <div class="calc-result-main">
                 <div class="big-number" id="monthlyPayment">$0</div>
                 <div class="label">Monthly Payment</div>
