--- a/calculators/compound-interest.html
+++ b/calculators/compound-interest.html
@@ -171,7 +171,7 @@
         </div>
 
         <!-- Output Panel -->
-        <div class="calc-output-panel">
+        <div class="calc-output-panel" id="results">
             <div class="calc-result-main">
                 <div class="big-number" id="futureValue">$0</div>
                 <div class="label">Future Value</div>
