--- a/calculators/debt-payoff.html
+++ b/calculators/debt-payoff.html
@@ -280,7 +280,7 @@
         </div>
 
         <!-- Output Panel -->
-        <div class="calc-output-panel">
+        <div class="calc-output-panel" id="results">
             <div class="calc-result-main">
                 <div class="big-number" id="payoffTime">0 months</div>
                 <div class="label">Time to Debt Freedom</div>
