--- a/calculators/emergency-fund.html
+++ b/calculators/emergency-fund.html
@@ -211,7 +211,7 @@
         </div>
 
         <!-- Output Panel -->
-        <div class="calc-output-panel">
+        <div class="calc-output-panel" id="results">
             <div class="calc-result-main">
                 <div class="big-number" id="targetFund">$21,000</div>
                 <div class="label">Target Emergency Fund</div>
