--- a/calculators/inflation.html
+++ b/calculators/inflation.html
@@ -158,7 +158,7 @@
         </div>
 
         <!-- Output Panel -->
-        <div class="calc-output-panel">
+        <div class="calc-output-panel" id="results">
             <div class="calc-result-main">
                 <div class="big-number" id="futureValue">$134</div>
                 <div class="label">Future Cost of Same Goods</div>
