--- a/calculators/loan-payoff.html
+++ b/calculators/loan-payoff.html
@@ -192,7 +192,7 @@
         </div>
 
         <!-- Output Panel -->
-        <div class="calc-output-panel">
+        <div class="calc-output-panel" id="results">
             <div class="calc-result-main">
                 <div class="big-number" id="interestSaved">$0</div>
                 <div class="label">Interest Saved</div>
