--- a/calculators/refinance.html
+++ b/calculators/refinance.html
@@ -216,7 +216,7 @@
         </div>
 
         <!-- Output Panel -->
-        <div class="calc-output-panel">
+        <div class="calc-output-panel" id="results">
             <div class="calc-result-main">
                 <div class="big-number" id="monthlySavings">$0</div>
                 <div class="label">Monthly Savings</div>
