--- a/calculators/rent-vs-buy.html
+++ b/calculators/rent-vs-buy.html
@@ -244,7 +244,7 @@
         </div>
 
         <!-- Output Panel -->
-        <div class="calc-output-panel">
+        <div class="calc-output-panel" id="results">
             <div class="calc-result-main">
                 <div class="big-number" id="recommendation">-</div>
                 <div class="label" id="savingsAmount">-</div>
