--- a/calculators/retirement.html
+++ b/calculators/retirement.html
@@ -179,7 +179,7 @@
         </div>
 
         <!-- Output Panel -->
-        <div class="calc-output-panel">
+        <div class="calc-output-panel" id="results">
             <div class="calc-result-main">
                 <div class="big-number" id="projectedSavings">$0</div>
                 <div class="label">Projected Savings at Retirement</div>
