--- a/calculators/salary.html
+++ b/calculators/salary.html
@@ -167,7 +167,7 @@
         </div>
 
         <!-- Output Panel -->
-        <div class="calc-output-panel">
+        <div class="calc-output-panel" id="results">
             <div class="calc-result-main">
                 <div class="big-number" id="annualPay">$50,000</div>
                 <div class="label">Annual Salary</div>
