--- a/calculators/home-affordability.html
+++ b/calculators/home-affordability.html
@@ -216,7 +216,7 @@
         </div>
 
         <!-- Output Panel -->
-        <div class="calc-output-panel">
+        <div class="calc-output-panel" id="results">
             <div class="calc-result-main">
                 <div class="big-number" id="maxHomePrice">$0</div>
                 <div class="label">Maximum Home Price</div>
