--- a/calculators/investment-return.html
+++ b/calculators/investment-return.html
@@ -155,7 +155,7 @@
         </div>
 
         <!-- Output Panel -->
-        <div class="calc-output-panel">
+        <div class="calc-output-panel" id="results">
             <div class="calc-result-main">
                 <div class="big-number" id="totalReturn">0%</div>
                 <div class="label">Total Return</div>
