--- a/calculators/mortgage.html
+++ b/calculators/mortgage.html
@@ -240,7 +240,7 @@
         </div>
 
         <!-- Output Panel -->
-        <div class="calc-output-panel">
+        <div class="calc-output-panel" id="results">
             <div class="calc-result-main">
                 <div class="big-number" id="monthlyPayment">$0</div>
                 <div class="label"><span>Monthly Payment</span> (<span>Principal & Interest</span>)</div>
