--- a/calculators/savings-goal.html
+++ b/calculators/savings-goal.html
@@ -167,7 +167,7 @@
         </div>
 
         <!-- Output Panel -->
-        <div class="calc-output-panel">
+        <div class="calc-output-panel" id="results">
             <div class="calc-result-main">
                 <div class="big-number" id="monthlySavings">$417</div>
                 <div class="label">Monthly Savings Needed</div>
