--- a/calculators/compound-interest.html
+++ b/calculators/compound-interest.html
@@ -26,6 +26,7 @@
     <!-- Favicon -->
     <link rel="icon" type="image/svg+xml" href="/favicon.svg">
     <script src="/js/init.js"></script>
+    <script src="/js/seo.js" defer></script>
 
     <script type="application/ld+json">
     {
