--- a/calculators/emergency-fund.html
+++ b/calculators/emergency-fund.html
@@ -27,6 +27,7 @@
     <!-- Favicon -->
     <link rel="icon" type="image/svg+xml" href="/favicon.svg">
     <script src="/js/init.js"></script>
+    <script src="/js/seo.js" defer></script>
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
