chore: add aria-live to primary calculator results

--- a/calculators/debt-payoff.html
+++ b/calculators/debt-payoff.html
@@ -282,7 +282,7 @@
         <!-- Output Panel -->
         <div class="calc-output-panel" id="results">
             <div class="calc-result-main">
-                <div class="big-number" id="payoffTime">0 months</div>
+                <div class="big-number" aria-live="polite" aria-atomic="true" id="payoffTime">0 months</div>
                 <div class="label">Time to Debt Freedom</div>
             </div>
 
