--- a/calculators/emergency-fund.html
+++ b/calculators/emergency-fund.html
@@ -214,7 +214,7 @@
         <!-- Output Panel -->
         <div class="calc-output-panel" id="results">
             <div class="calc-result-main">
-                <div class="big-number" id="targetFund">$21,000</div>
+                <div class="big-number" aria-live="polite" aria-atomic="true" id="targetFund">$21,000</div>
                 <div class="label">Target Emergency Fund</div>
             </div>
 
