--- a/calculators/mortgage.html
+++ b/calculators/mortgage.html
@@ -242,7 +242,7 @@
         <!-- Output Panel -->
         <div class="calc-output-panel" id="results">
             <div class="calc-result-main">
-                <div class="big-number" id="monthlyPayment">$0</div>
+                <div class="big-number" aria-live="polite" aria-atomic="true" id="monthlyPayment">$0</div>
                 <div class="label"><span>Monthly Payment</span> (<span>Principal & Interest</span>)</div>
             </div>
 
