--- a/calculators/refinance.html
+++ b/calculators/refinance.html
@@ -218,7 +218,7 @@
         <!-- Output Panel -->
         <div class="calc-output-panel" id="results">
             <div class="calc-result-main">
-                <div class="big-number" id="monthlySavings">$0</div>
+                <div class="big-number" aria-live="polite" aria-atomic="true" id="monthlySavings">$0</div>
                 <div class="label">Monthly Savings</div>
             </div>
 
