--- a/calculators/social-security.html
+++ b/calculators/social-security.html
@@ -182,7 +182,7 @@
         <!-- Output Panel -->
         <div class="calc-output-panel" id="results">
             <div class="calc-result-main">
-                <div class="big-number" id="monthlyBenefit">$0</div>
+                <div class="big-number" aria-live="polite" aria-atomic="true" id="monthlyBenefit">$0</div>
                 <div class="label">Monthly Benefit at Retirement</div>
             </div>
 
