--- a/calculators/401k.html
+++ b/calculators/401k.html
@@ -193,7 +193,7 @@
         <!-- Output Panel -->
         <div class="calc-output-panel" id="results">
             <div class="calc-result-main">
-                <div class="big-number" id="totalAtRetirement">$0</div>
+                <div class="big-number" aria-live="polite" aria-atomic="true" id="totalAtRetirement">$0</div>
                 <div class="label">Projected 401(k) Balance at Retirement</div>
             </div>
 
