--- a/calculators/auto-loan.html
+++ b/calculators/auto-loan.html
@@ -215,7 +215,7 @@
         <!-- Output Panel -->
         <div class="calc-output-panel" id="results">
             <div class="calc-result-main">
-                <div class="big-number" id="monthlyPayment">$0</div>
+                <div class="big-number" aria-live="polite" aria-atomic="true" id="monthlyPayment">$0</div>
                 <div class="label">Monthly Payment</div>
             </div>
 
