--- a/calculators/compound-interest.html
+++ b/calculators/compound-interest.html
@@ -174,7 +174,7 @@
         <!-- Output Panel -->
         <div class="calc-output-panel" id="results">
             <div class="calc-result-main">
-                <div class="big-number" id="futureValue">$0</div>
+                <div class="big-number" aria-live="polite" aria-atomic="true" id="futureValue">$0</div>
                 <div class="label">Future Value</div>
             </div>
 
