--- a/calculators/home-affordability.html
+++ b/calculators/home-affordability.html
@@ -218,7 +218,7 @@
         <!-- Output Panel -->
         <div class="calc-output-panel" id="results">
             <div class="calc-result-main">
-                <div class="big-number" id="maxHomePrice">$0</div>
+                <div class="big-number" aria-live="polite" aria-atomic="true" id="maxHomePrice">$0</div>
                 <div class="label">Maximum Home Price</div>
             </div>
 
