--- a/calculators/inflation.html
+++ b/calculators/inflation.html
@@ -161,7 +161,7 @@
         <!-- Output Panel -->
         <div class="calc-output-panel" id="results">
             <div class="calc-result-main">
-                <div class="big-number" id="futureValue">$134</div>
+                <div class="big-number" aria-live="polite" aria-atomic="true" id="futureValue">$134</div>
                 <div class="label">Future Cost of Same Goods</div>
             </div>
 
