--- a/calculators/investment-return.html
+++ b/calculators/investment-return.html
@@ -158,7 +158,7 @@
         <!-- Output Panel -->
         <div class="calc-output-panel" id="results">
             <div class="calc-result-main">
-                <div class="big-number" id="totalReturn">0%</div>
+                <div class="big-number" aria-live="polite" aria-atomic="true" id="totalReturn">0%</div>
                 <div class="label">Total Return</div>
             </div>
 
