--- a/calculators/loan-payoff.html
+++ b/calculators/loan-payoff.html
@@ -194,7 +194,7 @@
         <!-- Output Panel -->
         <div class="calc-output-panel" id="results">
             <div class="calc-result-main">
-                <div class="big-number" id="interestSaved">$0</div>
+                <div class="big-number" aria-live="polite" aria-atomic="true" id="interestSaved">$0</div>
                 <div class="label">Interest Saved</div>
             </div>
 
