--- a/calculators/rent-vs-buy.html
+++ b/calculators/rent-vs-buy.html
@@ -246,7 +246,7 @@
         <!-- Output Panel -->
         <div class="calc-output-panel" id="results">
             <div class="calc-result-main">
-                <div class="big-number" id="recommendation">-</div>
+                <div class="big-number" aria-live="polite" aria-atomic="true" id="recommendation">-</div>
                 <div class="label" id="savingsAmount">-</div>
             </div>
 
