--- a/calculators/roth-vs-traditional.html
+++ b/calculators/roth-vs-traditional.html
@@ -228,7 +228,7 @@
         <!-- Output Panel -->
         <div class="calc-output-panel" id="results">
             <div class="calc-result-main">
-                <div class="big-number" id="difference">$0</div>
+                <div class="big-number" aria-live="polite" aria-atomic="true" id="difference">$0</div>
                 <div class="label">Difference in After-Tax Value</div>
             </div>
 
