--- a/calculators/salary.html
+++ b/calculators/salary.html
@@ -170,7 +170,7 @@
         <!-- Output Panel -->
         <div class="calc-output-panel" id="results">
             <div class="calc-result-main">
-                <div class="big-number" id="annualPay">$50,000</div>
+                <div class="big-number" aria-live="polite" aria-atomic="true" id="annualPay">$50,000</div>
                 <div class="label">Annual Salary</div>
             </div>
 
