--- a/calculators/savings-goal.html
+++ b/calculators/savings-goal.html
@@ -170,7 +170,7 @@
         <!-- Output Panel -->
         <div class="calc-output-panel" id="results">
             <div class="calc-result-main">
-                <div class="big-number" id="monthlySavings">$417</div>
+                <div class="big-number" aria-live="polite" aria-atomic="true" id="monthlySavings">$417</div>
                 <div class="label">Monthly Savings Needed</div>
             </div>
 
