--- a/calculators/self-employment-tax.html
+++ b/calculators/self-employment-tax.html
@@ -204,7 +204,7 @@
         <!-- Output Panel -->
         <div class="calc-output-panel" id="results">
             <div class="calc-result-main">
-                <div class="big-number" id="quarterlyPayment">$0</div>
+                <div class="big-number" aria-live="polite" aria-atomic="true" id="quarterlyPayment">$0</div>
                 <div class="label">Estimated Quarterly Payment</div>
             </div>
 
