--- a/calculators/take-home-pay.html
+++ b/calculators/take-home-pay.html
@@ -249,7 +249,7 @@
         <!-- Output Panel -->
         <div class="calc-output-panel" id="results">
             <div class="calc-result-main">
-                <div class="big-number" id="netPay">$0</div>
+                <div class="big-number" aria-live="polite" aria-atomic="true" id="netPay">$0</div>
                 <div class="label">Net Pay (Take Home)</div>
             </div>
 
